# Dhis2_Form_image_Data_capture

./: .gitignore  main.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: datasets_view.jsx  form_upload.jsx  login_form.jsx
image_pipeline/: image_processing.py  tessearct_ocr.py
llm_pipeline/: llm_text_to_fiels.py
preprocessing/: image_processing.py
