[project]
name = "ocr-data-capture-dhis2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "filetype>=1.2.0",
    "httpx>=0.28.1",
    "opencv-python>=5.0.0.93",
    "pydantic>=2.13.4",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
